--- a/FE_Lab_Beckend/FE_Lab_Beckend/appsettings.json
+++ b/FE_Lab_Beckend/FE_Lab_Beckend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-E3A94E4\\SQLEXPRESS;Database=fe;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
